# Assignment_submission

.github/workflows/: cd.yml  ci-cd-pipeline.yml  ci.yml
build_bikesharing/: Dockerfile
build_bikesharing/Application/: .gitignore  Manifest.in  pyproject.toml  setup.py
build_bikesharing/Application/bikeshare_model/: .gitignore
build_bikesharing/Application/bikeshare_model/datasets/: .gitignore
build_bikesharing/Application/bikeshare_model/processing/: data_manager.py
build_bikesharing/Application/requirements/: requirements.txt
build_bikesharing/Application/tests/: test_predictions.py
build_bikesharing/bike_sharing_api/: .gitignore  requirements.txt
build_bikesharing/bike_sharing_api/app/: api.py
build_bikesharing/bike_sharing_api/app/schemas/: predict.py
